fixed grid alignment

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
   overflow: visible;
   opacity: 0;
   filter: blur(10px);
-  transform: translateY(20px);
+  transform: translateY(-2px) !important;
   animation: fadeInUp 1s cubic-bezier(0.23, 1, 0.32, 1) forwards var(--animation-delay);
 }
 
@@ -82,6 +82,7 @@ body {
   animation: fadeInUp 1s cubic-bezier(0.23, 1, 0.32, 1) forwards calc(var(--animation-delay) + 0.3s);
   width: 100%;
   padding: 0 0;
+  margin-top: 3px;
 }
 
 .instagram-link {
@@ -102,7 +103,7 @@ body {
   transform: translateY(15px);
   animation: fadeInUp 1s cubic-bezier(0.23, 1, 0.32, 1) forwards calc(var(--animation-delay) + 0.6s);
   text-decoration: none;
-  margin-top: 24px;
+  margin-top: 19px;
 }
 
 @keyframes fadeInUp {
